--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
 
         <p>중부대학교 정보보호학과 김현빈</p>
         <p>웹프로그래밍 강의를 진행합니다</p>
+        <p>재미있는 강의 같이 해봐요.</p>
       </div>
     </section>
 
