--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
           <li>
             <a href="contact.html">Contact</a>
           </li>
+          <li>
+            <a href="form.html">Form</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -30,9 +33,32 @@
       <div class="container">
         <h1>Contact. 연락처</h1>
 
-        <p>전화번호 : 000-0000-0000</p>
-        <p>홈페이지 : <a href="http://cris.joongbu.ac.kr/">CRIS</a></p>
-        <p>이메일 : aaa@naver.com</p>
+        <img src="img/man.jpg" width="450px" alt="사진" />
+
+        <table border="1px solid black" width="450px">
+          <thead>
+            <tr bgcolor="yellow">
+              <th>항목</th>
+              <th>내용</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>전화번호</td>
+              <td>010-1234-5678</td>
+            </tr>
+            <tr>
+              <td>홈페이지</td>
+              <td>
+                <a href="http://cris.joongbu.ac.kr/">CRIS</a>
+              </td>
+            </tr>
+            <tr>
+              <td>이메일</td>
+              <td>aaa@bbb.com <br />abc@aaa.com</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </section>
 
