--- a/about.html
+++ b/about.html
@@ -22,6 +22,9 @@
           <li>
             <a href="contact.html">Contact</a>
           </li>
+          <li>
+            <a href="form.html">Form</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -32,11 +35,25 @@
 
         <h3>prof. Hyeonbin Kim</h3>
 
-        <img src="img/man.jpg" width="200px" />
+        <img src="img/man.jpg" width="300px" />
 
+        <br />
+        <a href="https://www.joongbu.ac.kr/home/" target="_self"
+          ><h3>중부대학교</h3></a
+        >
         <p>중부대학교 정보보호학과 김현빈</p>
         <p>웹프로그래밍 강의를 진행합니다</p>
         <p>재미있는 강의 같이 해봐요.</p>
+        <br />
+
+        <a href="https://www.youtube.com/" target="_self">Youtube</a><br />
+
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/tgbNymZ7vqY"
+        >
+        </iframe>
       </div>
     </section>
 
